@@ -7,8 +7,8 @@
  */
 package ru.game.aurora.world.generation.aliens;
 
+import ru.game.aurora.dialog.Dialog;
 import ru.game.aurora.npc.AlienRace;
-import ru.game.aurora.npc.Dialog;
 import ru.game.aurora.npc.SingleShipFixedTime;
 import ru.game.aurora.world.World;
 import ru.game.aurora.world.generation.WorldGeneratorPart;
