@@ -3,6 +3,10 @@ VERSION 0.0.5
 
 IN PROGRESS...
 
+* Dialogs with options that are visible only in certain conditions (based on game state)
+* Fixes of dialog view (multi-line replies)
+* Some crashes fixed
+
 =====================================================
 VERSION 0.0.4
 
